--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -15,18 +15,18 @@
 </head>
 
 <body>
-    <div id="page">
-        <header>
-            <div id="topStrip">
-                <a href="" id="logo">
-                    <img src="{% static 'images/logowhite.png' %}" alt="logo" />
-                </a>
-                <div id="login_signup">
-                    <a href="" class="tipText">Already?</a>
-                    <a href="" class="lsText">&nbspLog in</a>
-                </div>
-            </div>
-        </header>
+<!--    <div id="page">-->
+<!--        <header>-->
+<!--            <div id="topStrip">-->
+<!--                <a href="" id="logo">-->
+<!--                    <img src="{% static 'images/logowhite.png' %}" alt="logo" />-->
+<!--                </a>-->
+<!--                <div id="login_signup">-->
+<!--                    <a href="" class="tipText">Already?</a>-->
+<!--                    <a href="" class="lsText">&nbspLog in</a>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </header>-->
 
         <div id="signBorder">
             <div id="signFrame">
