--- a/templates/feed/register.html
+++ b/templates/feed/register.html
@@ -8,7 +8,7 @@
       </title>
     <link rel="stylesheet" href="/static/css/register.css" type="text/css">
      <link rel="shortcut icon" href="/static/images/favicon.ico" type="image/x-icon" />
-<!--      <script defer src = "/static/js/register.js"></script>-->
+      <script defer src = "/static/js/register.js"></script>
    </head>
 <body>
           <a href="{% url 'feed:home' %}" id="logo">
@@ -58,7 +58,7 @@
         </div>
 
       </form>
-        <p>Already have an account? <a href="{% url 'feed:login' %}">Log in here</a></p>
+        <small>Already have an account? <a href="{% url 'feed:login' %}">Log in here</a></small>
     </div>
   </div>
 
