--- a/templates/feed/categories.html
+++ b/templates/feed/categories.html
@@ -49,7 +49,7 @@
         {% endfor %}
         </table>
     {% else %}
-            No posts in this category.
+            No {{ name }} posts yet.
     {% endif %}
 </div>
 {% endblock %}
