--- a/templates/feed/home.html
+++ b/templates/feed/home.html
@@ -18,10 +18,10 @@
             <td>
             <div class="picLine">
                 <div class="pic" style="height: 600px;">
-                    <a href="{% url 'feed:show_post' post.id%}"><img class="image" width="200px";
+                    <a href="{% url 'feed:show_post' post.id%}"><img class="image" style="width: 365; height: 600px; object-fit: cover;"
                         src="{{ post.picture.url }}" alt="Image of {{ post.title }}"</a>
                     <div class="allPicOpera">
-                        {% if post.creator.UserProfile.profile_picture %}
+                        {% if post.creator.profile_picture %}
                         <a href=""><img width="45px"; style="transform: translate(5px,15px);"
                                 src="{{ post.creator.profile_picture.url }}" alt="profile picture" />
                                 <div class="followPic"><img src="{% static 'images/followPic.png' %}"
@@ -34,7 +34,7 @@
                                         alt="followPic" /></div>
                             </a>
                         {% endif %}
-                        <a href="" class="authorName">{{ post.creator.username }}</a>
+                        <a href="{% url 'feed:account' post.creator.username %}" class="authorName">{{ post.creator.username }}</a>
                         {% if user.is_authenticated %}
                         
                         
