Added option to like posts - only html

--- a/templates/feed/picDetail.html
+++ b/templates/feed/picDetail.html
@@ -24,7 +24,7 @@
         <div id="authorCom">
             <div class="Allopera">
                 <div class="normal">
-                    <a href=""><img src="{% static 'images/heart.png' %}" alt="heart" /></a>
+                    <a href="{% url 'feed:like_post' post.id %}"><img src="{% static 'images/heart.png' %}" alt="heart" /></a>
                     {{post.likes}}
                 </div>  
             </div>
