--- a/templates/feed/picDetail.html
+++ b/templates/feed/picDetail.html
@@ -37,7 +37,7 @@
             <div id="author">
                 <a href="">
                 {% if post.creator.profile_picture %}
-                    <img id="authorProfile" src="{{creator.profile_picture.url}}" alt="authorProfile" />
+                    <img id="authorProfile" src="{{post.creator.profile_picture.url}}" alt="authorProfile" />
                 {% else %}
                     <img id="authorProfile" src="{{ MEDIA_URL }}profile.png" alt="authorProfile" />
                 {%endif%}
@@ -46,8 +46,8 @@
                 <div id="authorDetail">
                     <a href="" id="name">{{creator.name}}</a>
                     <div id="authorOpera">
-                        <a class="button" href="">Follow</a>
-                        <a class="button" href="">&nbsp&nbspDM&nbsp&nbsp</a>
+                        <a class="button" href="{% url 'feed:follow_user' post.creator.username  %}">Follow</a>
+                        <a class="button" href="">Attempt</a>
                     </div>
                 </div>
                 
