--- a/templates/feed/login.html
+++ b/templates/feed/login.html
@@ -47,7 +47,7 @@
 
                 <div class="help_text">
                     <small>Don't have an account? <a href="{% url 'feed:register' %}">Sign up here</a></small><br>
-                    <small>Forget your password? <a href="{% url 'feed:reset_password' %}">Change password</a></small>
+                    <small>Forget your password? <a href="../../reset-password">Change password</a></small>
                 </div>
             </form>
         </div>
