--- a/templates/feed/picDetail.html
+++ b/templates/feed/picDetail.html
@@ -54,7 +54,7 @@
             </div>
             <div id="description">{{post.title}}</div>
             <div id="comments">
-			<div id="sumNum">{{comments.count}} comments</div>
+			<div id="sumNum">{{comments.count}} Comments</div>
 				{% for comment in comments %}
 					<div class="comment">
 					<div class="commFrame">
