--- a/templates/feed/picDetail.html
+++ b/templates/feed/picDetail.html
@@ -55,18 +55,19 @@
             <div id="description">{{post.title}}</div>
             <div id="comments"></div>
 			<div id="sumNum">{{comments.count}} Comments</div>
+                <div class="commFrame">
+                    <form action="" method="POST">
+                        {% csrf_token %}
+                        <div class="input-box">
+                            {{ form.comment }}
+                        </div>
+                        <input type="submit" value="Comment">
+                    </form>
+                </div>
 				{% for comment in comments %}
 					<div class="comment">
+                        {{ comment.user.username }}
                         {{ comment.comment }}
-					<div class="commFrame">
-                        <form action="" method="POST">
-                            {% csrf_token %}
-                            <div class="input-box">
-                                {{ form.comment }}
-                            </div>
-                            <input type="submit" value="Comment">
-                        </form>
-					</div>
 				    </div>
 				{% endfor %}
                 
