--- a/templates/feed/searchTitle.html
+++ b/templates/feed/searchTitle.html
@@ -40,7 +40,7 @@
                             <img class="heartButton" id="{{ post.id }}" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart" /></a>
                             <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                                 alt="chat-bubble-dots" /></a>
-
+					{% endif %}
                     </div>
                 </div>
             </td>	
