--- a/templates/feed/home.html
+++ b/templates/feed/home.html
@@ -19,7 +19,7 @@
             <div class="picLine">
                 <div class="pic" style="height: 600px;">
                     <a href="{% url 'feed:show_post' post.id%}"><img class="image" style="width: 365; height: 600px; object-fit: cover;"
-                        src="{{ post.picture.url }}" alt="Image of {{ post.title }}"</a>
+                        src="{{ post.picture.url }}" alt="Image of {{ post.title }}">
                     <div class="allPicOpera">
                         {% if post.creator.profile_picture %}
                         <a href=""><img width="45px"; style="transform: translate(5px,15px);"
@@ -36,20 +36,16 @@
                         {% endif %}
                         <a href="{% url 'feed:account' post.creator.username %}" class="authorName">{{ post.creator.username }}</a>
                         {% if user.is_authenticated %}
-                        
-                        
                             <a href = "{% url 'feed:like_post' post.id %}">
                             
                                 <img class="heartButton" id="{{ post.id }}" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart" /></a>
 
                             <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                                 alt="chat-bubble-dots" /></a>
-                                
-                                
                         {% endif %}
-
                     </div>
                 </div>
+            </div>
             </td>
             {% endfor %}
         </tr>
