made a mistake with categories, the commit was rolled back and this should display inteded behaviour

--- a/templates/feed/searchTitle.html
+++ b/templates/feed/searchTitle.html
@@ -13,40 +13,40 @@
     <div id="tipText"><span>All results are shown below.</span></div>
     
     <div id="resultFrame">
-	{% for post in matching_posts %}
-    <td>
-        <div class="picLine">
-            <div class="pic" style="height: 600px;">
-                <a href="{% url 'feed:show_post' post.id%}"><img class="image" style="width: 365; height: 600px; object-fit: cover;"
-                    src="{{ post.picture.url }}" alt="Image of {{ post.title }}">
-                <div class="allPicOpera">
-                    {% if post.creator.profile_picture %}
-                    <a href=""><img width="45px"; style="transform: translate(5px,15px);"
-                            src="{{ post.creator.profile_picture.url }}" alt="profile picture" />
-                            <div class="followPic"><img src="{% static 'images/followPic.png' %}"
-                                alt="followPic" /></div>
-                        </a>			
-                    {% else %}
-                        <a href=""><img width="45px"; style="transform: translate(5px,15px);"
-                            src="{{ MEDIA_URL }}profile.png" alt="profile picture1" />
-                                <div class="followPic"><img src="{% static 'images/followPic.png' %}"
-                                    alt="followPic" /></div>
-                        </a>
-                    {% endif %}
-                    <a href="{% url 'feed:account' post.creator.username %}" class="authorName">{{ post.creator.username }}</a>
-                    {% if user.is_authenticated %}
-                        <a href = "{% url 'feed:like_post' post.id %}">
-                            <img class="heartButton" id="{{ post.id }}" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart" /></a>
-                        <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
-                            alt="chat-bubble-dots" /></a>   
-                    {% endif %}
-                </div>
-            </div>  
+        {% for post in matching_posts %}
+    
+            <td>
+                <div class="picLine">
+                    <div class="pic" style="height: 600px;">
+                        <a href="{% url 'feed:show_post' post.id%}"><img class="image" style="width: 365; height: 600px; object-fit: cover;"
+                            src="{{ post.picture.url }}" alt="Image of {{ post.title }}">
+                        <div class="allPicOpera">
+                            {% if post.creator.UserProfile.profile_picture %}
+                            <a href=""><img width="45px"; style="transform: translate(5px,15px);"
+                                    src="{{ post.creator.profile_picture.url }}" alt="profile picture" />
+                                    <div class="followPic"><img src="{% static 'images/followPic.png' %}"
+                                        alt="followPic" /></div>
+                                </a>			
+                            {% else %}
+                                <a href=""><img width="45px"; style="transform: translate(5px,15px);"
+                                    src="{{ MEDIA_URL }}profile.png" alt="profile picture1" />
+                                        <div class="followPic"><img src="{% static 'images/followPic.png' %}"
+                                            alt="followPic" /></div>
+                                </a>
+                            {% endif %}
+                            <a href="" class="authorName">{{ post.creator.username }}</a>
+                            {% if user.is_authenticated %}
+    
+                                <img class="heartButton" id="{{ post.id }}" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart" /></a>
+                                <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
+                                    alt="chat-bubble-dots" /></a>
+                        {% endif %}
+                        </div>
+                    </div>
+                </td>	
+        {% endfor %}
+    
         </div>
-    </td>	
-	{% endfor %}
-        
-    </div>
     
 </div>
 {% else %}
