--- a/templates/feed/otherUserPage.html
+++ b/templates/feed/otherUserPage.html
@@ -25,7 +25,7 @@
                     <div class="follow"><a href>{{ follower_count }}</a></div>
                 </div>
                 <div id="authorOpera">
-                    <a class="button" href="{% url 'feed:follow_user' post.creator.username  %}">Follow</a>
+                    <a class="button" href="{% url 'feed:follow_user' show_user  %}">Follow</a>
                 </div>
             </div>
         </div>
