--- a/templates/feed/trending.html
+++ b/templates/feed/trending.html
@@ -16,8 +16,8 @@
                         <td>
                             <div class = "picLine">
                                 <div class="pic" style="height: 600px">
-                                    <a href><img class="image" width="200px" src="{{ post.picture.url }}"
-                                        alt="Image of {{ post.picture.title }}"></a>
+                                    <a href="{% url 'feed:show_post' post.id%}"><img class="image" style="width: 365; height: 600px; object-fit: cover;"
+                                        src="{{ post.picture.url }}" alt="Image of {{ post.title }}"></a>
                                     <div class="allPicOpera">
                                         {% if post.creator.UserProfile.profile_picture %}
                                             <a href=""><img width="45px"; style="transform: translate(5px,15px);"
