--- a/templates/feed/otherUserPage.html
+++ b/templates/feed/otherUserPage.html
@@ -12,14 +12,14 @@
     {% if user.is_authenticated %}
         <div id="author">
             <a href="">
-                {% if user.profile_picture %}
-                    <img id="authorProfile" src="{{user.profile_picture.url}}" alt="authorProfile" />
+                {% if show_user.profile_picture %}
+                    <img id="authorProfile" src="{{show_user.profile_picture.url}}" alt="authorProfile" />
                 {% else %}
                     <img id="authorProfile" src="{{ MEDIA_URL }}profile.png" alt="authorProfile" />
                 {%endif%}
             </a>
             <div id="authorDetail">
-                <a href="" id="name">{{ user.username }}</a>
+                <a href="" id="name">{{ show_user.username }}</a>
                 <div id="followFrame">
                     <div class="follow"><a href>{{ following_count }}</a></div>
                     <div class="follow"><a href>{{ follower_count }}</a></div>
@@ -49,7 +49,7 @@
                             <span class="foldersText">Folders</span>
                             <div class="folder">
                                 <a href="" style="border-color:rgb(251, 255, 0)"  class="icon"></a>
-                                <a href="{% url 'feed:show_folder' user.username folder.id%}"><span>{{ folder.name }}</span></a>
+                                <a href="{% url 'feed:show_folder' show_user.username folder.id%}"><span>{{ folder.name }}</span></a>
                             </div>
                             <div class="operaFrame">
                                 <a class="addDeleteCat" href=""><img class="addDeleteCatButton" src="{% static 'images/addPost.png' %}" alt="addCat"></a>
