Trying to get show_folder to work. This maybe doesnt work :|

--- a/templates/feed/searchTitle.html
+++ b/templates/feed/searchTitle.html
@@ -43,7 +43,8 @@
                         {% endif %}
                         </div>
                     </div>
-                </td>	
+                </div>
+            </td>	
         {% endfor %}
     
         </div>
