added a link to addPost.html in home and changed views.py to have boolean_attempt at False on default

--- a/templates/feed/home.html
+++ b/templates/feed/home.html
@@ -8,6 +8,7 @@
 
 
 {% block body_block %}
+<a href="{% url 'feed:add_post' %}">Post something!</a> <!--Try to make this prettier -->
 <div id="postPics">
 <table>
 
