small personalpage changes

--- a/templates/feed/personalPage.html
+++ b/templates/feed/personalPage.html
@@ -35,7 +35,7 @@
                 <div id="buttonUnderline1"></div>
             </div>
             <div id="attemptsButton">
-                <a href="{% url 'feed:show_my_attempts'%}">Attempts</a>
+                <a href="{% url 'feed:show_my_attempts' user.username%}">Attempts</a>
                 <div id="buttonUnderline2"></div>
             </div>
         </div>
