--- a/templates/feed/base.html
+++ b/templates/feed/base.html
@@ -25,6 +25,9 @@
         </head>
 
         <body>
+            {% if user.is_authenticated %}
+                <a href="{% url 'feed:logout' %}">Logout</a>
+            {% endif %}
             <div id="page">
                 <header>
                     <div id="topStrip">
