--- a/templates/feed/base.html
+++ b/templates/feed/base.html
@@ -25,9 +25,6 @@
         </head>
 
         <body>
-            {% if user.is_authenticated %}
-                <a href="{% url 'feed:logout' %}">Logout</a>
-            {% endif %}
             <div id="page">
                 <header>
                     <div id="topStrip">
@@ -49,11 +46,13 @@
                             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
                             <link href="https://fonts.googleapis.com/css2?family=Passion+One&display=swap" rel="stylesheet">
                             {% if user.is_authenticated %}
-                            <a href="{% url 'feed:account' user.username %}" class="lsTest">Hi, {{ user }}</a>
+                                <a href="{% url 'feed:account' user.username %}" class="lsTest">Hi, {{ user }}</a>
+                                <div id="topLine"></div>
+                                <a href="{% url 'feed:logout' %}" class="lsText">&nbsp&nbspLogout</a>
                             {% else %}
-                            <a href="{% url 'feed:login' %}" class="lsText">Log In</a>
-                            <div id="topLine"></div>
-                            <a href="{% url 'feed:register' %}" class="lsText">&nbsp&nbspSign Up</a>
+                                <a href="{% url 'feed:login' %}" class="lsText">Log In</a>
+                                <div id="topLine"></div>
+                                <a href="{% url 'feed:register' %}" class="lsText">&nbsp&nbspSign Up</a>
                             {% endif %}
                         </div>
                     </div>
