--- a/templates/feed/home.html
+++ b/templates/feed/home.html
@@ -39,6 +39,7 @@
                         {% if user.is_authenticated %}
                             <a href = "{% url 'feed:like_post' post.id %}">
                             
+								<!-- needs to be taken from model (whether liked or not) to decide url -->
                                 <img class="heartButton" id="{{ post.id }}" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart" /></a>
 
                             <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
