added language to base.hml

--- a/templates/feed/base.html
+++ b/templates/feed/base.html
@@ -8,6 +8,7 @@
     
         <head>
             <meta charset="UTF-8">
+			<html lang="en">
             <title>
                 {% block title_block %}
                 a default
