--- a/templates/feed/personalPage.html
+++ b/templates/feed/personalPage.html
@@ -42,7 +42,7 @@
                 <a href="{% url 'feed:following'%}">Following</a>
             </div>
             <div id="postButton">
-                <a href="{% url 'feed:followers'%}">Followers</a>
+                <a href="{% url 'feed:follower'%}">Followers</a>
             </div>
         </div>
         <div id="folderAndPics">
