--- a/templates/feed/password_reset_done.html
+++ b/templates/feed/password_reset_done.html
@@ -1,13 +1,15 @@
+{% extends 'feed/base.html' %}
 <!DOCTYPE html>
-{% load static %}
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Password reset complete</title>
+{% load staticfiles %}
+
+{% block title_block %}
+    Password reset complete
+{% endblock %}
+
+{% block body_block %}
     <link rel="stylesheet" href="/static/css/password_reset.css" type="text/css">
     <link rel="shortcut icon" href="/static/images/favicon.ico" type="image/x-icon">
-</head>
-<body>
+
     <a href="{% url 'feed:home' %}" id="logo">
               <img src="{% static 'images/logowhite.png' %}" alt="logo" id="logo_img" />
     </a>
@@ -19,15 +21,4 @@
                 <a href="{% url 'feed:login' %}" >log in</a> now. </strong>
         </div>
     </div>
-    <div class="rowLine"></div>
-        <div id="bottom">
-            <link rel="preconnect" href="https://fonts.googleapis.com">
-            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Passion+One&display=swap" rel="stylesheet">
-            <a href="{% url 'feed:about' %}" class="helpInfo">About</a>
-            <a href="{% url 'feed:help' %}" class="helpInfo">Help</a>
-            <a href="{% url 'feed:contact_us' %}" class="helpInfo">Contact us</a>
-        </div>
-        <div id="copyright">Copyright © 2022 Team 9D. All rights reserved.</div>
-</body>
-</html>
+{% endblock %}
